--- a/style.css
+++ b/style.css
@@ -16,10 +16,12 @@ body {
 
 .slider-button {
     background-color: rgba(255, 184, 92, 0); 
+     color: rgb(0, 0, 0);
     padding: 0.75rem 1.5rem;
-    border-radius: 9999px; 
+    border-radius: 9999px; /* 丸いボタン */
     font-weight: 600;
     transition: background-color 0.3s ease;
+    backdrop-filter: blur(5px);
 
 }
 .slider-button:hover {
